--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,24 @@
     "name": "faonni/module-shipping-multi-flat",
     "description": "MultiFlatShipping extension will create 5 flat rate shipping methods with different prices and conditions.",
     "type": "magento2-module",
-	"version": "2.0.2",
+	"version": "2.0.3",
+    "authors": [{
+        "name" : "Karliuka Vitalii",
+        "email": "karliuka.vitalii@gmail.com"
+    }],		
 	"license": [
 		"OSL-3.0"
-		],
+    ],
 	"require": {
-		"php": "~5.5.0|~5.6.0|~7.0.0"
-		},
+		"php": "~5.5.0|~5.6.0|~7.0.0",
+		"magento/module-shipping": "100.0.*"	
+    },
 	"autoload": {
-	"files": [ "registration.php" ],
-	"psr-4": {
-		"Faonni\\MultiFlatShipping\\": ""
-		}
+        "files": [ 
+            "registration.php" 
+        ],
+        "psr-4": {
+            "Faonni\\MultiFlatShipping\\": ""
+        }
 	}
 }
