--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "faonni/module-shipping-multi-flat",
     "description": "MultiFlatShipping extension will create 5 flat rate shipping methods with different prices and conditions.",
     "type": "magento2-module",
-	"version": "2.1.0",
+	"version": "2.1.1",
     "authors": [{
         "name" : "Karliuka Vitalii",
         "email": "karliuka.vitalii@gmail.com"
@@ -12,7 +12,7 @@
     ],
 	"require": {
 		"php": "~5.6.0|~7.0.0",
-		"magento/module-shipping": "100.1.*|100.2.*"	
+		"magento/module-shipping": "~100.1.0|~100.2.0"	
     },
 	"autoload": {
         "files": [ 
