--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "faonni/module-shipping-multi-flat",
     "description": "MultiFlatShipping extension will create 5 flat rate shipping methods with different prices and conditions.",
     "type": "magento2-module",
-	"version": "2.1.1",
+	"version": "2.1.2",
     "authors": [{
         "name" : "Karliuka Vitalii",
         "email": "karliuka.vitalii@gmail.com"
@@ -11,7 +11,7 @@
 		"OSL-3.0"
     ],
 	"require": {
-		"php": "~5.6.0|~7.0.0",
+		"php": "~5.6.0|~7.0.0|~7.1.0",
 		"magento/module-shipping": "~100.1.0|~100.2.0"	
     },
 	"autoload": {
