--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
 	"require": {
 		"php": "~5.6.0|~7.0.0|~7.1.0",
-		"magento/module-shipping": "100.1.*|~100.2.*"	
+		"magento/module-shipping": "100.1.*|100.2.*"	
     },
 	"autoload": {
         "files": [ 
