--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,25 @@
     "name": "faonni/module-shipping-multi-flat",
     "description": "MultiFlatShipping extension will create 5 flat rate shipping methods with different prices and conditions.",
     "type": "magento2-module",
-	"version": "2.1.3",
-    "authors": [{
-        "name" : "Karliuka Vitalii",
-        "email": "karliuka.vitalii@gmail.com"
-    }],		
-	"license": [
-		"OSL-3.0"
+    "version": "2.1.3",
+    "authors": [
+        {
+            "name": "Karliuka Vitalii",
+            "email": "karliuka.vitalii@gmail.com"
+        }
     ],
-	"require": {
-		"magento/module-shipping": "100.1.*|100.2.*"	
+    "license": [
+        "OSL-3.0"
+    ],
+    "require": {
+        "magento/module-shipping": "100.1.*|100.2.*"
     },
-	"autoload": {
-        "files": [ 
-            "registration.php" 
+    "autoload": {
+        "files": [
+            "registration.php"
         ],
         "psr-4": {
             "Faonni\\MultiFlatShipping\\": ""
         }
-	}
+    }
 }
